--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks-bank-of-flatiron-code-challenge",
+  "name": "Contacts-App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
