--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "Contacts-App",
+  "name": "login-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.1",
-    "semantic-ui-css": "^2.2.10"
-  },
-  "devDependencies": {
-    "json-server": "^0.15.1"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=8000 react-scripts start",
-    "server": "json-server --watch db.json -p 8001"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
